@@ -76,6 +76,7 @@ public:
 	POINTER_D_ACCESSOR_DECL(const AbstractColumn, yColumn, YColumn)
 	CLASS_D_ACCESSOR_DECL(QString, xColumnPath, XColumnPath)
 	CLASS_D_ACCESSOR_DECL(QString, yColumnPath, YColumnPath)
+	BASIC_D_ACCESSOR_DECL(bool, legendVisible, LegendVisible)
 
 	BASIC_D_ACCESSOR_DECL(LineType, lineType, LineType)
 	BASIC_D_ACCESSOR_DECL(bool, lineSkipGaps, LineSkipGaps)
@@ -202,6 +203,7 @@ signals:
 	void yErrorPlusDataChanged();
 	void yErrorMinusDataChanged();
 	void valuesDataChanged();
+	void legendVisibleChanged(bool);
 	void visibilityChanged(bool);
 	void selected(double pos);
 
