@@ -43,6 +43,7 @@
 		* Add inverse axis scale
 		* Rug plot - visualization where the data points are displayed as marks along the axes
 		* Tufte's "range frames" - a new mode in Axis to automatically set the start and end points of the axis to the min and max data points
+		* Allow to specify which curves should be shown in the plot legend
 
 Bug fixes:
 	* Fitting: Fix missing locale support in evaluating range of fit function
